--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>QuickStart</title>
-    <link rel="stylesheet" href="/clone.css">
+    <link rel="stylesheet" href="/style.css">
     <script src="https://code.iconify.design/iconify-icon/2.1.0/iconify-icon.min.js"></script>
     <!-- Fav icon -->
     <link rel="shortcut icon" href="./imgs/fac-icon/favicon-16x16.png" type="image/x-icon">
@@ -588,17 +588,23 @@
 
         <div class="contact-section">
             <div class="address-portion">
-                <iconify-icon class="address-icon" icon="bi:geo-alt"></iconify-icon>
+                <div>
+                    <iconify-icon class="address-icon" icon="bi:geo-alt"></iconify-icon>
+                </div>
                 <h4>Address</h4>
                 <span>A108 Adam Street, New York, NY 535022</span>
             </div>
             <div class="call-portion">
-                <iconify-icon class="call-icon" icon="bi:telephone"></iconify-icon>
+                <div>
+                    <iconify-icon class="call-icon" icon="bi:telephone"></iconify-icon>
+                </div>
                 <h4>Call Us</h4>
                 <span>+1 5589 55488 55</span>
             </div>
             <div class="email-portion">
-                <iconify-icon class="email-icon" icon="bi:envelope"></iconify-icon>
+                <div>
+                    <iconify-icon class="email-icon" icon="bi:envelope"></iconify-icon>
+                </div>
                 <h4>Email Us</h4>
                 <span>info@example.com</span>
             </div>
@@ -666,8 +672,10 @@
             </div>
             <div class="footer-bottom">
                 <hr class="bottom-horizontal-line">
+                <div class="footer-bottom-data">
                 <p>© Copyright <b>QuickStart</b> All Rights Reserved</p>
                 <span class="footer-last-line">Designed by <a href="https://bootstrapmade.com/demo/QuickStart/">BootstrapMade</a></span>
+            </div>
             </div>
         </footer>
 </body>
