--- a/pages/features.html
+++ b/pages/features.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>QuickStart</title>
-    <link rel="stylesheet" href="../clone.css">
+    <link rel="stylesheet" href="/style.css">
     <script src="https://code.iconify.design/iconify-icon/2.1.0/iconify-icon.min.js"></script>
      <!-- Fav icon -->
      <link rel="shortcut icon" href="../imgs/fac-icon/favicon-16x16.png" type="image/x-icon">
@@ -20,7 +20,7 @@
             <label for="menu-toggle" class="menu-icon"><iconify-icon icon="solar:hamburger-menu-outline"></iconify-icon></label>     
                
             <ul class="nav-links-items">
-                <li class="nav-items"><a href="/clone.html">Home</a></li>
+                <li class="nav-items"><a href="/index.html">Home</a></li>
                 <li class="nav-items"><a href="/pages/about.html">About</a></li>
                 <li class="nav-items"><a href="/pages/services.html">Services</a></li>
                 <li class="nav-items"><a href="/pages/features.html">Features</a></li>
