--- a/pages/contact.html
+++ b/pages/contact.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>QuickStart</title>
-    <link rel="stylesheet" href="/clone.css">
+    <link rel="stylesheet" href="/style.css">
     <script src="https://code.iconify.design/iconify-icon/2.1.0/iconify-icon.min.js"></script>
      <!-- Fav icon -->
      <link rel="shortcut icon" href="../imgs/fac-icon/favicon-16x16.png" type="image/x-icon">
@@ -20,7 +20,7 @@
             <label for="menu-toggle" class="menu-icon"><iconify-icon icon="solar:hamburger-menu-outline"></iconify-icon></label>     
                
             <ul class="nav-links-items">
-                <li class="nav-items"><a href="/clone.html">Home</a></li>
+                <li class="nav-items"><a href="/index.html">Home</a></li>
                 <li class="nav-items"><a href="/pages/about.html">About</a></li>
                 <li class="nav-items"><a href="/pages/services.html">Services</a></li>
                 <li class="nav-items"><a href="/pages/features.html">Features</a></li>
@@ -31,6 +31,8 @@
             </ul>
         </div>          
     </header>
+    <!-- Contact Portion -->
+
     <div class="contact-section-head">
         <h1>Contact</h1>
         <hr class="contact-head-bottom-line">
@@ -39,17 +41,23 @@
 
     <div class="contact-section">
         <div class="address-portion">
-            <iconify-icon class="address-icon" icon="bi:geo-alt"></iconify-icon>
+            <div>
+                <iconify-icon class="address-icon" icon="bi:geo-alt"></iconify-icon>
+            </div>
             <h4>Address</h4>
             <span>A108 Adam Street, New York, NY 535022</span>
         </div>
         <div class="call-portion">
-            <iconify-icon class="call-icon" icon="bi:telephone"></iconify-icon>
+            <div>
+                <iconify-icon class="call-icon" icon="bi:telephone"></iconify-icon>
+            </div>
             <h4>Call Us</h4>
             <span>+1 5589 55488 55</span>
         </div>
         <div class="email-portion">
-            <iconify-icon class="email-icon" icon="bi:envelope"></iconify-icon>
+            <div>
+                <iconify-icon class="email-icon" icon="bi:envelope"></iconify-icon>
+            </div>
             <h4>Email Us</h4>
             <span>info@example.com</span>
         </div>
@@ -70,56 +78,58 @@
         </div>
     </div>
 
-    <!-- Footer Section -->
+<!-- Footer Section -->
 
-    <footer class="footer-section">
-        <div class="footer-top">
-            <div class="footer-1st">
-                <h2>QuickStart</h2>
-                <p>A108 Adam Street New York, NY 535022</p>
-                <ul>
-                    <li><b>Phone:</b> +1 5589 55488 55</li>
-                    <li><b>Email:</b> info@example.com</li>
-                </ul>
-                <div class="footer-1st-icons">
-                    <iconify-icon class="footer-icon-1" icon="bi:twitter-x"></iconify-icon>
-                    <iconify-icon class="footer-icon-2" icon="bi:facebook"></iconify-icon>
-                    <iconify-icon class="footer-icon-3" icon="bi:instagram"></iconify-icon>
-                    <iconify-icon class="footer-icon-4" icon="bi:linkedin"></iconify-icon>
-                </div>
-            </div>
-            <div class="footer-2nd">
-                <h4>Useful Links</h4>
-                <ul>
-                    <li>Home</li>
-                    <li>About Us</li>
-                    <li>Services</li>
-                    <li>Terms of service</li>
-                    <li>Privacy Policy</li>
-                </ul>
-            </div>
-            <div class="footer-3rd">
-                <h4>Our Services</h4>
-                <ul>
-                    <li>Web Design</li>
-                    <li>Web Development</li>
-                    <li>Product Management</li>
-                    <li>Marketing</li>
-                    <li>Graphic Design</li>
-                </ul>
-            </div>
-            <div class="footer-4th">
-                <h4>Our Newsletter</h4>
-                <p>Subscribe to our newsletter and receive the latest news about our products and services!</p>
-                <input class="footer-subscribe-input" type="text">
-                <button>Subscribe</button>
+<footer class="footer-section">
+    <div class="footer-top">
+        <div class="footer-1st">
+            <h2>QuickStart</h2>
+            <p>A108 Adam Street New York, NY 535022</p>
+            <ul>
+                <li><b>Phone:</b> +1 5589 55488 55</li>
+                <li><b>Email:</b> info@example.com</li>
+            </ul>
+            <div class="footer-1st-icons">
+                <iconify-icon class="footer-icon-1" icon="bi:twitter-x"></iconify-icon>
+                <iconify-icon class="footer-icon-2" icon="bi:facebook"></iconify-icon>
+                <iconify-icon class="footer-icon-3" icon="bi:instagram"></iconify-icon>
+                <iconify-icon class="footer-icon-4" icon="bi:linkedin"></iconify-icon>
             </div>
         </div>
-        <div class="footer-bottom">
-            <hr class="bottom-horizontal-line">
-            <p>© Copyright <b>QuickStart</b> All Rights Reserved</p>
-            <span>Designed by <a href="https://bootstrapmade.com/demo/QuickStart/">BootstrapMade</a></span>
+        <div class="footer-2nd">
+            <h4>Useful Links</h4>
+            <ul>
+                <li>Home</li>
+                <li>About Us</li>
+                <li>Services</li>
+                <li>Terms of service</li>
+                <li>Privacy Policy</li>
+            </ul>
         </div>
-    </footer>
+        <div class="footer-3rd">
+            <h4>Our Services</h4>
+            <ul>
+                <li>Web Design</li>
+                <li>Web Development</li>
+                <li>Product Management</li>
+                <li>Marketing</li>
+                <li>Graphic Design</li>
+            </ul>
+        </div>
+        <div class="footer-4th">
+            <h4>Our Newsletter</h4>
+            <p>Subscribe to our newsletter and receive the latest news about our products and services!</p>
+            <input class="footer-subscribe-input" type="text">
+            <button>Subscribe</button>
+        </div>
+    </div>
+    <div class="footer-bottom">
+        <hr class="bottom-horizontal-line">
+        <div class="footer-bottom-data">
+        <p>© Copyright <b>QuickStart</b> All Rights Reserved</p>
+        <span class="footer-last-line">Designed by <a href="https://bootstrapmade.com/demo/QuickStart/">BootstrapMade</a></span>
+    </div>
+    </div>
+</footer>
 </body>
 </html>
